--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -1,6 +1,69 @@
-/* You can override SASS variables here. */
+$container-max-width: 1448px;
+$menu-width: 298px;
+$toc-width: 224px;
 
-$font-size-12: $font-size-14;
+// Colors
 
+$white: #fff;
+$gray-100: #f8f9fa;
+$gray-200: #e9ecef;
+$gray-300: #dee2e6;
+$gray-400: #ced4da;
+$gray-500: #adb5bd;
+$gray-600: #6c757d;
+$gray-700: #495057;
+$gray-800: #343a40;
+$gray-900: #212529;
+$black: #000;
+
+$blue: #0d6efd;
+$indigo: #6610f2;
+$purple: #6f42c1;
+$pink: #d63384;
+$red: #dc3545;
+$orange: #fd7e14;
+$yellow: #ffc107;
+$green: #198754;
+$teal: #20c997;
+$cyan: #0dcaf0;
+
+$primary: $blue;
+$secondary: $gray-600;
+$success: $green;
+$info: $cyan;
+$warning: $yellow;
+$danger: $red;
+$light: $gray-100;
+$dark: $gray-900;
+
+// Components
+
+$border-color: $gray-300;
+$border-radius: 3px;
+
+// Typography
+
+$font-family-sans-serif: Roboto, "Helvetica Neue", "Helvetica", "Hiragino Sans",
+  "Hiragino Kaku Gothic ProN", "Arial", "Yu Gothic", "Meiryo", sans-serif;
 $font-family-serif: "Times New Roman", "YuMincho", "Hiragino Mincho ProN",
   "Yu Mincho", "MS PMincho", serif;
+
+$text-muted: $gray-600;
+
+@mixin theme-light {
+  --gray-100: #{$gray-100};
+  --gray-200: #{$gray-200};
+  --gray-500: #{$gray-500};
+
+  --color-link: #{$blue};
+  --color-visited-link: #{$blue};
+
+  --body-background: #{$white};
+  --body-font-color: #{$gray-900};
+
+  --icon-filter: none;
+
+  --hint-color-info: #{$cyan};
+  --hint-color-warning: #{$yellow};
+  --hint-color-danger: #{$red};
+}
