--- a/layouts/partials/docs/inject/menu-after.html
+++ b/layouts/partials/docs/inject/menu-after.html
@@ -1,13 +1,14 @@
 <nav>
   <ul>
     <li class="book-section-flat">
-      <strong>カテゴリ</strong>
       <ul>
         {{- $pages := ($.Site.GetPage (urlize "/categories")).Pages -}}
         {{ range $pages }}
-          <li class="flex justify-between">
-            <a href="{{ .RelPermalink }}">{{ .Title }}</a>
-            <span>{{ len .Pages }}</span>
+          <li>
+            <a href="{{ .RelPermalink }}" class="flex justify-between">
+              <span>{{ .Title }}</span>
+              <span>{{ len .Pages }}</span>
+            </a>
           </li>
         {{ end }}
       </ul>
