--- a/themes/hugo-book/assets/_variables.scss
+++ b/themes/hugo-book/assets/_variables.scss
@@ -1,4 +1,5 @@
-$font-family-serif: "Noto Serif JP", serif;
+$font-family-serif: "Noto Serif JP", "ヒラギノ明朝 ProN W6", "HiraMinProN-W6",
+  "ＭＳ Ｐ明朝", "MS PMincho", serif;
 
 $headings-font-weight: 700;
 $headings-font-family: $font-family-serif;
