--- a/themes/hugo-book/layouts/partials/docs/post-meta.html
+++ b/themes/hugo-book/layouts/partials/docs/post-meta.html
@@ -1,4 +1,4 @@
 <div class="book-post-meta">
-  <span class="book-post-meta__icon"><i class="bi bi-{{ .Icon }}"></i></span>
-  <span class="book-post-meta__text">{{ .Text }}</span>
+  <span class="icon"><i class="bi bi-{{ .Icon }}"></i></span>
+  <span class="text">{{ .Text }}</span>
 </div>
