--- a/themes/hugo-book/layouts/_default/_markup/render-heading.html
+++ b/themes/hugo-book/layouts/_default/_markup/render-heading.html
@@ -1,8 +1,8 @@
-<div class="book-heading book-heading--h{{ .Level }}">
-  <div class="book-heading__anchor">
-    <a href="#{{ .Anchor | safeURL }}" class="anchor"><i class="bi bi-link"></i></a>
+<div class="book-heading h{{ .Level }}">
+  <div class="anchor">
+    <a href="#{{ .Anchor | safeURL }}"><i class="bi bi-link"></i></a>
   </div>
-  <div class="book-heading__text">
+  <div class="text">
     <h{{ .Level }} id="{{ .Anchor | safeURL }}">{{ .Text | safeHTML }}</h{{ .Level }}>
   </div>
 </div>
