--- a/themes/hugo-book/assets/book.css
+++ b/themes/hugo-book/assets/book.css
@@ -1,14 +1,15 @@
+@import "components/_container.css";
 @import "components/_header.css";
 @import "components/_heading.css";
-@import "components/_menu.css";
+@import "components/_hint.css";
+@import "components/_link.css";
+@import "components/_nav.css";
+@import "components/_page.css";
 @import "components/_pagination.css";
-@import "components/_post-meta.css";
 @import "components/_post.css";
-@import "components/_posts.css";
-@import "components/_shortcodes.css";
+@import "components/_tag.css";
 @import "components/_toc.css";
 
-@import "_base.css";
 @import "_markdown.css";
 
 @tailwind base;
