--- a/themes/hugo-book/assets/components/_header.css
+++ b/themes/hugo-book/assets/components/_header.css
@@ -11,7 +11,7 @@
 }
 
 .book-header {
-  @apply bg-white border-b border-b-gray-200 fixed flex h-[var(--book-header-h)] inset-x-0 items-center justify-center top-0 z-30;
+  @apply bg-white border-b fixed flex h-[var(--book-header-h)] inset-x-0 items-center justify-center top-0 z-30;
 
   &__brand {
     @apply font-bold font-serif m-0 text-xl sm:text-2xl lg:text-3xl tracking-tighter underline;
