--- a/themes/hugo-book/assets/components/_pagination.css
+++ b/themes/hugo-book/assets/components/_pagination.css
@@ -2,7 +2,7 @@
   @apply flex items-stretch;
 
   .page-link {
-    @apply block border border-gray-200 px-3 py-1.5;
+    @apply block border px-3 py-1.5;
   }
 
   .page-item {
